# Advanced-Swimming-Training-Bot-with-AI-features

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ANTI_JUMP_TRACKING.md  ARCHITECTURE.md  BIOMECHANICS_GUIDE.md  CHANGELOG.md  CLAUDE.md  COMPLETE_SOLUTION_GUIDE.md  CONFIG_SETUP.md  Dockerfile  FIXES_APPLIED.md  FPS_FIX_GUIDE.md  FPS_GUIDE.md  FPS_QUICK_GUIDE.md  FULL_FRAMERATE_GUIDE.md  GIT_PUSH_GUIDE.md  IMPLEMENTED_TODAY.md  IMPROVEMENTS_LOG.md  IMPROVEMENTS_PLAN.md  INTEGRATION_COMPLETE.md  INTEGRATION_EXAMPLE.md  Makefile  NEXT_STEPS.md  PRODUCT_READINESS_ASSESSMENT.md  QUICKSTART.md  QUICK_PROGRESS.md  QUICK_START.md  README.md  README_IMPROVEMENTS.md  README_UA.md  ROADMAP_TO_10.md  SETUP.md  SMOOTH_TRACKING_GUIDE.md  SPINE_AXIS_GUIDE.md  START_HERE.md  STREAMLIT_APP.md  SUMMARY.md  TEST_RESULTS.md  (+25 more)
assets/: styles.css
backend/: Dockerfile  requirements.txt
data/: athletes.db
docs/: ANDROID_APP_PLAN.md  USER_GUIDE.md  UX.md  clinical-pilot.md  macos-launcher.md
examples/: run_local_video_analysis.py
frontend/: .gitignore  Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
handlers/: common.py  error_handler.py  menu.py  onboarding_tour.py  video_analysis.py
i18n/: __init__.py  ru.yaml  translations.py  uk.yaml
middlewares/: rate_limit.py
pages/: ai_assistant.py  cycling.py  dryland.py  history.py  rehabilitation.py  running.py  swimming.py  tools.py
reports/: __init__.py  data_export.py  image_report.py
scripts/: install-macos-launcher.sh  sprint-ai-run.sh
services/: container.py  (+1 more)
(+255 files in other folders)
