[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"backend/app/services/running.py" = ["E402"]
"backend/app/services/swimming.py" = ["E402"]
"tests/unit/test_cycling_analyzer.py" = ["E402"]
"tests/unit/test_rehabilitation_api.py" = ["E402"]
"tests/unit/test_running_analyzer.py" = ["E402"]

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ["py311"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
